force-app/main/default/objects/Tax_Directive_Relationship_to_Person__c/Tax_Directive_Relationship_to_Person__c.object-meta.xml
<CustomObject>
    <description>Tax Directive Relationship to the person account to allow for multiple tax directives if applicable per person</description>
    <label>Tax Directive Relationship to Person</label>
    <nameField>
        <displayFormat>TR--{0000}</displayFormat>
        <label>Tax Directive  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Directives Relationship to Person</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>