force-app/main/default/objects/Tax_Directive_Relationship_to_Person__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tax Directives Relationship to Person</relationshipLabel>
    <relationshipName>Tax_Directives_Relationship_to_Person</relationshipName>
    <type>Lookup</type>
</CustomField>