force-app/main/default/objects/Tax_Directive_Relationship_to_Person__c/fields/Relationship_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Create_Date__c</fullName>
    <label>Relationship Create Date</label>
    <type>Date</type>
</CustomField>