force-app/main/default/objects/Tax_Directive_Relationship_to_Person__c/fields/Tax_Directive__c.field-meta.xml
<CustomField>
    <fullName>Tax_Directive__c</fullName>
    <label>Tax Directive</label>
    <referenceTo>Tax_Directive__c</referenceTo>
    <relationshipLabel>Tax Directives Relationship to Person</relationshipLabel>
    <relationshipName>Tax_Directives_Relationship_to_Person</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>